--- a/style/mazeGame.css
+++ b/style/mazeGame.css
@@ -15,8 +15,7 @@
 }
 
 #mazeStartButton .center {
-    padding: 22% 0;
-
+    padding-top: 22%;
 }
 
 #mazeContainer {
@@ -106,7 +105,7 @@
     margin-top: 30px;
     margin-right: 50px;
     margin-left: 50px;
-    
+    margin-bottom: 30px;
 }
 
 #mazeInstructions {
